@@ -1,4 +1,6 @@
 1.2.4b2:
+    Core & Setup:
+    * 0314 FIX: Fix CMC not executing any Check_MK checks after config reload...
 
 
 1.2.4b1:
